@@ -185,8 +185,8 @@ Output version information and exit.
 Display help and exit.
 .IP "\fB\-\-log-level\fR=\fIlevel"
 Set verbosity level (0 to 6).
-.IP "\fB\-\-enable-log-color
-Enable colored log messages.
+.IP "\fB\-\-disable-log-color
+Disable colored log messages.
 .SH EXPRESSION SYNTAX
 A search expression consists of at least one comparison or file flag to test.
 Multiple expressions can be evaluated with conditional operators:
